src/test/ui/parser/mistyped_reserved_token.stderr
error: `"While"` is not a keyword
  --> $DIR/mistyped_reserved_token.rs:2:19
   |
LL |     let a = While true {
   |                   ^^^^ help: try `"while"` instead

error: aborting due to previous error

